<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="equally">=</string>
    <string name="point">.</string>
    <string name="reset">C</string>
    <string name="myStyle">Стандартная тема</string>
    <string name="darkStyle">Темная тема</string>
    <string name="lightStyle">Светлая тема</string>
</resources>