<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MyStyle"
    tools:context=".MainActivity">


    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView" >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myStyle" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lightStyle" />


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/darkStyle" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightTextView"
        android:layout_margin="@dimen/marginTextView"
        android:background="@drawable/input_text"
        android:gravity="end"
        android:padding="@dimen/paddingText"
        android:textSize="@dimen/textSizeView"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtons" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <Button
            android:id="@+id/button_div"
            style="@style/styte_btn"
            android:layout_column="3"
            android:text="@string/division" />

        <Button
            android:id="@+id/button_1"
            style="@style/styte_btn"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button_2"
            style="@style/styte_btn"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button_3"
            style="@style/styte_btn"
            android:layout_width="match_parent"
            android:text="@string/_3" />

        <Button
            android:id="@+id/button_mul"
            style="@style/styte_btn"
            android:text="@string/multiplication" />

        <Button
            android:id="@+id/button_4"
            style="@style/styte_btn"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button_5"
            style="@style/styte_btn"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button_6"
            style="@style/styte_btn"
            android:text="@string/_6" />

        <Button
            android:id="@+id/button_sub"
            style="@style/styte_btn"
            android:text="@string/subtraction" />

        <Button
            android:id="@+id/button_7"
            style="@style/styte_btn"
            android:text="@string/_7"/>

        <Button
            android:id="@+id/button_8"
            style="@style/styte_btn"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button_9"
            style="@style/styte_btn"
            android:text="@string/_9" />

        <Button
            android:id="@+id/button_add"
            style="@style/styte_btn"
            android:text="@string/addition" />

        <Button
            android:id="@+id/button_0"
            style="@style/styte_btn"
            android:text="@string/_0" />


        <Button
            android:id="@+id/button_res"
            style="@style/styte_btn"
            android:text="@string/reset" />

        <Button
            android:id="@+id/button_equals"
            style="@style/styte_btn"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:text="@string/equally" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>